# passes-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yaml
examples/pass-generator/: .gitignore  Cargo.toml
examples/pass-generator-dal/: Cargo.toml  README.md
examples/pass-generator-dal/src/: main.rs
examples/pass-generator/src/: main.rs
src/: lib.rs  package.rs  pass.rs
src/package/: manifest.rs  resource.rs  sign.rs
src/pass/: barcode.rs  beacon.rs  date_format.rs  fields.rs  location.rs  nfc.rs  pass_fields.rs  semantic_tags.rs  visual_appearance.rs  web_service.rs
