workspace = { members = ["examples/pass-generator"] }
[package]
name = "passes"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "0.1.0"
edition = "2021"
authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
is_empty = "0.2.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
