[package]
name = "passes"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "1.0.1"
edition = "2021"
authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/passes/latest/passes/"
repository = "https://github.com/mvodya/passes-rs"

[workspace]
members = [
  "examples/pass-generator",
  "examples/pass-generator-dal"
]

[dependencies]
chrono = "0.4.34"
hex = "0.4.3"
is_empty = "0.2.0"
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
